feat: network region positioning with coordinates JSON
Co-authored-by: remicorne <59827951+remicorne@users.noreply.github.com>

--- a/INTERFACE.ipynb
+++ b/INTERFACE.ipynb
@@ -38,11 +38,10 @@
    "source": [
     "# TISSUE WEIGHT stats  \n",
     "from module.core.Figure import StatisticsTable, Histogram, QuantitativeDataSelection\n",
-    "legit_regions = [\"OF\",\"PL\",\"aCC\",\"M1\",\"SJ\",\"S1L\",\"S1R\",\"AC\",\"V1\",\"A\",\"dH\",\"vH\",\"NAc\",\"VM\",\"DM\",\"VL\",\"DL\",\"MD\",\"VPL\",\"VPR\",\"DLG\",\"HY\",\"SC\",\"SN\",\"VTA\",\"DR\",\"MR\",\"CB\"]\n",
     "\n",
     "table = StatisticsTable(project=\"TCB-2\", \n",
     "                          experiment=\"weight\",\n",
-    "                          region=legit_regions, \n",
+    "                          region='TCB2_regions', \n",
     "                          from_scratch=True\n",
     "                          )\n",
     "# table.statistics_table.select(is_significant=True)\n",
@@ -57,7 +56,6 @@
    "source": [
     "#TISSUE WEIGHT plot \n",
     "from module.core.Figure import Histogram\n",
-    "legit_regions = [\"OF\",\"PL\",\"aCC\",\"M1\",\"SJ\",\"S1L\",\"S1R\",\"AC\",\"V1\",\"A\",\"dH\",\"vH\",\"NAc\",\"VM\",\"DM\",\"VL\",\"DL\",\"MD\",\"VPL\",\"VPR\",\"DLG\",\"HY\",\"SC\",\"SN\",\"VTA\",\"DR\",\"MR\",\"CB\"]\n",
     "\n",
     "\n",
     "# Histogram(project = 'TCB-2',\n",
@@ -68,7 +66,7 @@
     "Histogram(project = 'TCB-2',\n",
     "          experiment = 'weight',\n",
     "          from_scratch = True, \n",
-    "          region = legit_regions,\n",
+    "          region = 'TCB2_regions',\n",
     "          pool = 'treatment',\n",
     "          custom_params={\"plot_swarm\": False}\n",
     "          )\n"
@@ -95,14 +93,13 @@
     "#INSPECT COMPOUND DATA and STATS\n",
     "from module.core import  HPLC, Statistics, QuantitativeStatistic\n",
     "from module.core.Constants import * #git issue jas\n",
-    "legit_regions = [\"OF\",\"PL\",\"aCC\",\"M1\",\"SJ\",\"S1L\",\"S1R\",\"AC\",\"V1\",\"A\",\"dH\",\"vH\",\"NAc\",\"VM\",\"DM\",\"VL\",\"DL\",\"MD\",\"VPL\",\"VPR\",\"DLG\",\"HY\",\"SC\",\"SN\",\"VTA\",\"DR\",\"MR\",\"CB\"]\n",
     "\n",
     "#RAW data\n",
     "# data = HPLC('TCB-2').full_df \n",
     "\n",
     "#FULLY SIGNIFICANT stats\n",
     "data = Statistics('TCB-2').df \n",
-    "data.select(region = legit_regions, compound= COMPOUND_CLASSES['monoamines'])\n",
+    "data.select(region = 'TCB2_regions', compound= COMPOUND_CLASSES['monoamines'])\n",
     "# data.select(significant_pair=('3mg/kg TCB-2', 'vehicles'), compound=[\"GLU\", \"GABA\", \"ASP\", \"GLY\", \"TAU\"])\n",
     "\n",
     "# CALCULATE SPECIFIC INSIGNIFICANT \n",
@@ -117,7 +114,6 @@
    "outputs": [],
    "source": [
     "# PLOT HISTOGRAMS\n",
-    "legit_regions = [\"OF\",\"PL\",\"aCC\",\"M1\",\"SJ\",\"S1L\",\"S1R\",\"AC\",\"V1\",\"A\",\"dH\",\"vH\",\"NAc\",\"VM\",\"DM\",\"VL\",\"DL\",\"MD\",\"VPL\",\"VPR\",\"DLG\",\"HY\",\"SC\",\"SN\",\"VTA\",\"DR\",\"MR\",\"CB\"]\n",
     "high_DA = ['A','NAc', 'VM', 'DM', 'VL', 'DL', 'VTA']\n",
     "low_DA = [\"OF\",\"PL\",\"aCC\",\"M1\",\"SJ\",\"S1L\",\"S1R\",\"AC\",\"V1\",\"dH\",\"vH\",\"MD\",\"VPL\",\"VPR\",\"DLG\",\"HY\",\"SC\",\"SN\",\"DR\",\"MR\",\"CB\"]\n",
     "\n",
@@ -138,11 +134,12 @@
     "HVA_DA_sig_twoway = [ 'VTA']\n",
     "\n",
     "\n",
+    "\n",
     "from module.core.Figure import Histogram\n",
     "hist = Histogram(project = 'TCB-2', \n",
-    "                experiment=None, # dose response / agonist antagonist / None / weight\n",
-    "                compound='neurotransmitters', # 5HIAA/5HT \n",
-    "                region= ['OF'], #list\n",
+    "                experiment='agonist antagonist', # dose response / agonist antagonist / None / weight\n",
+    "                compound='DA', # 5HIAA/5HT \n",
+    "                region= 'TCB2_regions', #list\n",
     "                from_scratch=True, \n",
     "                remove_outliers='calculated', # calculated / eliminated / False\n",
     "                # custom_params={\"fig_width\": 20},  # fixed fig with bar width vaires \n",
@@ -182,9 +179,9 @@
     "\n",
     "Correlation(project ='TCB-2', \n",
     "                experiment='agonist antagonist', \n",
-    "                treatment = 'vehicles',\n",
-    "                compound='NA-5HT', \n",
-    "                region= ['OF','OF'], \n",
+    "                treatment = '3mg/kg TCB-2',\n",
+    "                compound='5HT', \n",
+    "                region= ['S1L','aCC'], \n",
     "                from_scratch=True, \n",
     "                remove_outliers='calculated', # calculated / eliminated / False\n",
     "                )"
@@ -198,16 +195,52 @@
    "source": [
     "from module.core.Figure import Correlogram \n",
     "\n",
-    "legit_regions = [\"OF\",\"PL\",\"aCC\",\"M1\",\"SJ\",\"S1L\",\"S1R\",\"AC\",\"V1\",\"A\",\"dH\",\"vH\",\"NAc\",\"VM\",\"DM\",\"VL\",\"DL\",\"MD\",\"VPL\",\"VPR\",\"DLG\",\"HY\",\"SC\",\"SN\",\"VTA\",\"DR\",\"MR\",\"CB\"]\n",
-    "\n",
     "\n",
     "Correlogram(project ='TCB-2', \n",
     "                # experiment='agonist antagonist', \n",
-    "                compound='monoamines', \n",
-    "                region= \"OF\", \n",
+    "                compound='5HT',  # 'monoamines'\n",
+    "                region= 'TCB2_regions', \n",
     "                from_scratch=True, \n",
     "                remove_outliers='calculated', # calculated / eliminated / False\n",
     "                )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "legit_regions = [\n",
+    "    \"OF\",\n",
+    "    \"PL\",\n",
+    "    \"aCC\",\n",
+    "    \"M1\",\n",
+    "    \"SJ\",\n",
+    "    \"S1L\",\n",
+    "    \"S1R\",\n",
+    "    \"AC\",\n",
+    "    \"V1\",\n",
+    "    \"MD\",\n",
+    "    \"VPL\",\n",
+    "    \"VPR\",\n",
+    "    \"DLG\",\n",
+    "    \"DM\",\n",
+    "    \"DL\",\n",
+    "    \"VM\",\n",
+    "    \"VL\",\n",
+    "    \"NAc\",\n",
+    "    \"SN\",\n",
+    "    \"VTA\",\n",
+    "    \"DR\",\n",
+    "    \"MR\",\n",
+    "    \"HY\",\n",
+    "    \"dH\",\n",
+    "    \"vH\",\n",
+    "    \"A\",\n",
+    "    \"SC\",\n",
+    "    \"CB\"\n",
+    "  ]"
    ]
   },
   {
@@ -219,16 +252,20 @@
     "from module.core.Figure import Network \n",
     "from module.core.Constants import * \n",
     "\n",
-    "legit_regions = [\"OF\",\"PL\",\"aCC\",\"M1\",\"SJ\",\"S1L\",\"S1R\",\"AC\",\"V1\",\"A\",\"dH\",\"vH\",\"NAc\",\"VM\",\"DM\",\"VL\",\"DL\",\"MD\",\"VPL\",\"VPR\",\"DLG\",\"HY\",\"SC\",\"SN\",\"VTA\",\"DR\",\"MR\",\"CB\"]\n",
     "\n",
     " \n",
     "Network(project ='TCB-2', \n",
     "                # experiment='agonist antagonist', \n",
     "                compound='5HT', \n",
-    "                region= 'thalamocortical_interaction', # 'thalamocortical_interaction'\n",
+    "                region= 'TCB2_condensed', # 'dopamine_vibes' / 'thalamocortical_interaction' / 'TCB2_regions'\n",
     "                from_scratch=True, \n",
     "                remove_outliers='calculated', # calculated / eliminated / False\n",
+    "                # custom_params = { 'edge_thickness': 1} , #'show_edge_labels':True,\n",
     "                )\n",
+    "\n",
+    "#NA     Reds\n",
+    "#DA     Blues\n",
+    "#5HT    Oranges\n",
     "\n",
     "# print (REGION_CLASSES['thalamocortical_interaction'])"
    ]
@@ -242,14 +279,13 @@
     "#TABLES \n",
     "from module.core.Figure import Table, StatisticsTable\n",
     "\n",
-    "legit_regions = [\"OF\",\"PL\",\"aCC\",\"M1\",\"SJ\",\"S1L\",\"S1R\",\"AC\",\"V1\",\"A\",\"dH\",\"vH\",\"NAc\",\"VM\",\"DM\",\"VL\",\"DL\",\"MD\",\"VPL\",\"VPR\",\"DLG\",\"HY\",\"SC\",\"SN\",\"VTA\",\"DR\",\"MR\",\"CB\"]\n",
     "\n",
     "#DATA TABLE\n",
     "# Table(project ='TCB-2', \n",
     "#                 # experiment='project', \n",
     "#                 compound=['5HT', '5HIAA', 'DA', 'DOPAC', 'HVA', '3MT', 'NA'], #SD\n",
     "#                 treatment = 'vehicles',\n",
-    "#                 region= legit_regions, \n",
+    "#                 region= 'TCB2_regions', \n",
     "#                 from_scratch=True, \n",
     "#                 remove_outliers='calculated', # calculated / eliminated / False\n",
     "#                 )\n",
@@ -257,7 +293,7 @@
     "#STATISTICS TABLE\n",
     "StatisticsTable(project=\"TCB-2\", \n",
     "                          experiment=\"dose response\",\n",
-    "                          region=legit_regions, \n",
+    "                          region='TCB2_regions', \n",
     "                          compound = ['5HT', '5HIAA', '5HIAA/5HT', 'DA', 'DOPAC', 'HVA', '3MT', 'DOPAC/DA', 'HVA/DA', '3MT/DA', 'NA'],\n",
     "                          from_scratch=True\n",
     "                          )\n",
