changes of dose_response adding _

--- a/TESTING.ipynb
+++ b/TESTING.ipynb
@@ -53,14 +53,14 @@
             "0,3mg/kg TCB vs. 10mg/kg TCB: Custom statistical test, P_val:3.520e-02\n",
             "vehicles vs. 3mg/kg TCB: Custom statistical test, P_val:1.140e-02\n",
             "vehicles vs. 10mg/kg TCB: Custom statistical test, P_val:1.400e-03\n",
-            "SAVED /home/remi/phd/PROJECTS/TCB2/dose response/5HIAA_5HT in OF.png\n",
-            "SAVED /home/remi/phd/PROJECTS/TCB2/dose response/5HIAA_5HT in OF.svg\n"
+            "SAVED /home/remi/phd/PROJECTS/TCB2/dose_response/5HIAA_5HT in OF.png\n",
+            "SAVED /home/remi/phd/PROJECTS/TCB2/dose_response/5HIAA_5HT in OF.svg\n"
           ]
         },
         {
           "data": {
             "text/plain": [
-              "Histogram(filepath='/home/remi/phd/PROJECTS/TCB2/dose response/5HIAA_5HT in OF.png', from_scratch=True, project='TCB2', compound='5HIAA/5HT', region='OF', experiment='dose response', p_value_threshold=0.05, handle_outliers=True, remove_outliers=False, custom_params={}, show_outliers=False)"
+              "Histogram(filepath='/home/remi/phd/PROJECTS/TCB2/dose_response/5HIAA_5HT in OF.png', from_scratch=True, project='TCB2', compound='5HIAA/5HT', region='OF', experiment='dose_response', p_value_threshold=0.05, handle_outliers=True, remove_outliers=False, custom_params={}, show_outliers=False)"
             ]
           },
           "execution_count": 2,
@@ -80,7 +80,7 @@
       ],
       "source": [
         "from module.core.Figure import Histogram\n",
-        "Histogram('TCB2', experiment=\"dose response\", compound=\"5HIAA/5HT\", region=['OF', 'PL'], from_scratch=True, remove_outliers=False)\n",
+        "Histogram('TCB2', experiment=\"dose_response\", compound=\"5HIAA/5HT\", region=['OF', 'PL'], from_scratch=True, remove_outliers=False)\n",
         "# Histogram('TCB2', compound=\"5HIAA/5HT\", region=['CE'], from_scratch=True, handle_outliers=False)\n",
         "# Histogram('TCB2', compound=\"5HIAA/5HT\", region=['CE'], from_scratch=True)\n",
         "# Histogram('TCB2', compound=\"5HIAA/5HT\", from_scratch=True)"
@@ -918,7 +918,7 @@
       ],
       "source": [
         "from module.core.HPLC import HPLC\n",
-        "HPLC('TCB2').select(experiment='dose response')"
+        "HPLC('TCB2').select(experiment='dose_response')"
       ]
     },
     {
