hist lines to access stats test

--- a/INTERFACE.ipynb
+++ b/INTERFACE.ipynb
@@ -350,20 +350,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Preparing statistical groupings for agonist antagonist: 100%|██████████| 1/1 [00:00<00:00, 553.05it/s]\n"
+      "Preparing statistical groupings for agonist_antagonist: 100%|██████████| 1/1 [00:00<00:00, 1080.73it/s]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5185e9fcbb3429cb3f9fc8300045f47",
+       "model_id": "8787436d264241909cf17b4a1381a7fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -378,10 +378,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SAVED /Users/jasminebutler/Desktop/phd/PROJECTS/TCB-2/agonist antagonist/histogram/NA in OF.png\n",
-      "SAVED /Users/jasminebutler/Desktop/phd/PROJECTS/TCB-2/agonist antagonist/histogram/NA in OF.svg\n",
-      "CREATED AND CACHED /Users/jasminebutler/Desktop/phd/PROJECTS/TCB-2/agonist antagonist/histogram/NA in OF.png\n"
+      "SAVED /Users/jasminebutler/Desktop/phd/PROJECTS/TCB-2/agonist_antagonist/histogram/NA in OF.png\n",
+      "SAVED /Users/jasminebutler/Desktop/phd/PROJECTS/TCB-2/agonist_antagonist/histogram/NA in OF.svg\n",
+      "CREATED AND CACHED /Users/jasminebutler/Desktop/phd/PROJECTS/TCB-2/agonist_antagonist/histogram/NA in OF.png\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum_sq</th>\n",
+       "      <th>df</th>\n",
+       "      <th>F</th>\n",
+       "      <th>PR(&gt;F)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C(treatment)</th>\n",
+       "      <td>0.004118</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.296364</td>\n",
+       "      <td>0.827783</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Residual</th>\n",
+       "      <td>0.180633</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                sum_sq    df         F    PR(>F)\n",
+       "C(treatment)  0.004118   3.0  0.296364  0.827783\n",
+       "Residual      0.180633  39.0       NaN       NaN"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -407,7 +463,8 @@
     "\n",
     "\n",
     "\n",
-    "# hist.statistics.select( test = 'tukey').result"
+    "hist.statistic.one_way_anova\n",
+    "# hist.statistics_table.select(test='tukey')\n"
    ]
   },
   {
@@ -560,7 +617,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
