plot degrees seperate functionality - run code in notebook - !DIDNT fully adress the issues of aggregate stats for network

--- a/INTERFACE.ipynb
+++ b/INTERFACE.ipynb
@@ -152,7 +152,7 @@
     "hist = Histogram(project = 'TCB-2', \n",
     "                experiment='agonist_antagonist', \n",
     "                compound=\"DA\", \n",
-    "                region= 'A', \n",
+    "                region= 'MR', \n",
     "                from_scratch=True, \n",
     "                remove_outliers='calculated', # calculated / eliminated / False\n",
     "                # custom_params={\"ylabel_x\": -0.1}\n",
@@ -160,8 +160,8 @@
     "\n",
     "\n",
     "\n",
-    "hist.statistic.two_way_anova\n",
-    "# hist.statistics_table.select(test='tukey')\n"
+    "# hist.statistic.two_way_anova\n",
+    "hist.statistics_table.select(test='tukey').values\n"
    ]
   },
   {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,23 +245,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from module.core.Figure import Network \n",
+    "from module.core.Figure import Network , NetworkDegrees\n",
     "from module.core.Constants import * \n",
     "\n",
-    "\n",
+    "# Network(project ='TCB-2', \n",
+    "#                 # experiment='agonist_antagonist', \n",
+    "#                 compound='5HT', \n",
+    "#                 region= legit_regions, # 'dopamine_vibes' / 'thalamocortical_interaction' / 'TCB2_regions'\n",
+    "#                 from_scratch=True, \n",
+    "#                 remove_outliers='calculated', # calculated / eliminated / False\n",
+    "#                 # custom_params = { 'edge_thickness': 1} , #'show_edge_labels':True,\n",
+    "#                 )\n",
     " \n",
-    "Network(project ='TCB-2', \n",
+    "NetworkDegrees(project ='TCB-2', \n",
     "                # experiment='agonist_antagonist', \n",
-    "                compound='5HT', \n",
-    "                region= 'TCB2_condensed', # 'dopamine_vibes' / 'thalamocortical_interaction' / 'TCB2_regions'\n",
+    "                compound='NA', \n",
+    "                region= legit_regions, # 'dopamine_vibes' / 'thalamocortical_interaction' / 'TCB2_regions'\n",
     "                from_scratch=True, \n",
     "                remove_outliers='calculated', # calculated / eliminated / False\n",
     "                # custom_params = { 'edge_thickness': 1} , #'show_edge_labels':True,\n",
     "                )\n",
-    "\n",
-    "#NA     Reds\n",
-    "#DA     Blues\n",
-    "#5HT    Oranges\n",
     "\n",
     "# print (REGION_CLASSES['thalamocortical_interaction'])"
    ]
@@ -289,9 +292,10 @@
     "#STATISTICS TABLE\n",
     "StatisticsTable(project=\"TCB-2\", \n",
     "                          experiment=\"agonist_antagonist\",\n",
-    "                          region='A', \n",
-    "                          compound = ['DA'],\n",
-    "                          from_scratch=True\n",
+    "                          region='TCB2_regions', \n",
+    "                          compound = ['5HT', '5HIAA', 'DA', 'DOPAC', 'HVA', '3MT', 'NA', '3MT/DA', '5HIAA/5HT', 'DOPAC/DA', 'HVA/DA'],\n",
+    "                          from_scratch=True, \n",
+    "                          remove_outliers = 'calculated'\n",
     "                          )\n",
     "\n",
     "\n"
