--- a/INTERFACE.ipynb
+++ b/INTERFACE.ipynb
@@ -10,24 +10,9 @@
     "from module.core.display import playground\n",
     "from module.core.Project import Project\n",
     "\n",
-    "# Project('example_project_name') #initiate project \n",
+    "# Project('example_project_name') #initiate project\n",
     "\n",
-    "playground() # loat interface"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#INSPECT PROJECT PRAMS\n",
-    "from module.core import ExperimentInformation, TreatmentInformation, Palette\n",
-    "from module.core.Metadata import ExperimentInformation\n",
-    "\n",
-    "# TreatmentInformation('TCB-2').open()\n",
-    "Palette(\"TCB-2\").open()\n",
-    "ExperimentInformation(\"TCB-2\").open()\n"
+    "playground()  # loat interface"
    ]
   },
   {
@@ -36,14 +21,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TISSUE WEIGHT stats  \n",
+    "# INSPECT PROJECT PRAMS\n",
+    "from module.core import ExperimentInformation, TreatmentInformation, Palette\n",
+    "from module.core.Metadata import ExperimentInformation\n",
+    "\n",
+    "# TreatmentInformation('TCB-2').open()\n",
+    "Palette(\"TCB-2\").open()\n",
+    "ExperimentInformation(\"TCB-2\").open()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TISSUE WEIGHT stats\n",
     "from module.core.Figure import StatisticsTable, Histogram, QuantitativeDataSelection\n",
     "\n",
-    "table = StatisticsTable(project=\"TCB-2\", \n",
-    "                          experiment=\"weight\",\n",
-    "                          region='TCB2_regions', \n",
-    "                          from_scratch=True\n",
-    "                          )\n",
+    "table = StatisticsTable(\n",
+    "    project=\"TCB-2\", experiment=\"weight\", region=\"TCB2_regions\", from_scratch=True\n",
+    ")\n",
     "# table.statistics_table.select(is_significant=True)\n",
     "table"
    ]
@@ -54,15 +52,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TISSUE WEIGHT plot \n",
+    "# TISSUE WEIGHT plot\n",
     "from module.core.Figure import Histogram\n",
     "\n",
     "\n",
-    "Histogram(project = 'TCB-2',\n",
-    "          experiment = 'weight',\n",
-    "          from_scratch = True, \n",
-    "          region = 'TCB2_regions')\n",
-    "\n"
+    "Histogram(\n",
+    "    project=\"TCB-2\", experiment=\"weight\", from_scratch=True, region=\"TCB2_regions\"\n",
+    ")"
    ]
   },
   {
@@ -71,9 +67,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#NORMALITY and AGGREGATE STATS\n",
+    "# NORMALITY and AGGREGATE STATS\n",
     "\n",
     "from module.core.Statistics import AggregateStatistics\n",
+    "\n",
     "AggregateStatistics(\"TCB-2\").select()"
    ]
   },
@@ -83,23 +80,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#INSPECT COMPOUND DATA and STATS\n",
-    "from module.core import  HPLC, Statistics, QuantitativeStatistic\n",
-    "from module.core.Constants import * #git issue jas\n",
+    "# INSPECT COMPOUND DATA and STATS\n",
+    "from module.core import HPLC, Statistics, QuantitativeStatistic\n",
+    "from module.core.Constants import *  # git issue jas\n",
     "\n",
-    "#RAW data\n",
-    "# data = HPLC('TCB-2').full_df \n",
+    "# RAW data\n",
+    "# data = HPLC('TCB-2').full_df\n",
     "\n",
-    "#FULLY SIGNIFICANT stats\n",
-    "data = Statistics('TCB-2')\n",
+    "# FULLY SIGNIFICANT stats\n",
+    "data = Statistics(\"TCB-2\")\n",
     "\n",
     "# data.select(region = 'TCB2_regions', compound= 'monoamines', experiment= 'dose_response')\n",
-    "data.select(significant_pair=('3mg/kg TCB-2', 'vehicles'), compound=[\"GLU\", \"GABA\", \"ASP\", \"GLY\", \"TAU\"])\n",
+    "data.select(\n",
+    "    significant_pair=(\"3mg/kg TCB-2\", \"vehicles\"),\n",
+    "    compound=[\"GLU\", \"GABA\", \"ASP\", \"GLY\", \"TAU\"],\n",
+    ")\n",
     "\n",
-    "# CALCULATE SPECIFIC INSIGNIFICANT \n",
+    "# CALCULATE SPECIFIC INSIGNIFICANT\n",
     "# calculated_statistic = QuantitativeStatistic.calculate(project=\"TCB-2\", experiment=None, compound=\"weight\")\n",
-    "# calculated_statistic.select(test = 'one_way_anova', is_significant = True)\n",
-    "\n"
+    "# calculated_statistic.select(test = 'one_way_anova', is_significant = True)"
    ]
   },
   {
@@ -109,37 +108,93 @@
    "outputs": [],
    "source": [
     "# PLOT HISTOGRAMS\n",
-    "high_DA = ['A','NAc', 'VM', 'DM', 'VL', 'DL', 'VTA']\n",
-    "low_DA = [\"OF\",\"PL\",\"aCC\",\"M1\",\"SJ\",\"S1L\",\"S1R\",\"AC\",\"V1\",\"dH\",\"vH\",\"MD\",\"VPL\",\"VPR\",\"DLG\",\"HY\",\"SC\",\"SN\",\"DR\",\"MR\",\"CB\"]\n",
+    "high_DA = [\"A\", \"NAc\", \"VM\", \"DM\", \"VL\", \"DL\", \"VTA\"]\n",
+    "low_DA = [\n",
+    "    \"OF\",\n",
+    "    \"PL\",\n",
+    "    \"aCC\",\n",
+    "    \"M1\",\n",
+    "    \"SJ\",\n",
+    "    \"S1L\",\n",
+    "    \"S1R\",\n",
+    "    \"AC\",\n",
+    "    \"V1\",\n",
+    "    \"dH\",\n",
+    "    \"vH\",\n",
+    "    \"MD\",\n",
+    "    \"VPL\",\n",
+    "    \"VPR\",\n",
+    "    \"DLG\",\n",
+    "    \"HY\",\n",
+    "    \"SC\",\n",
+    "    \"SN\",\n",
+    "    \"DR\",\n",
+    "    \"MR\",\n",
+    "    \"CB\",\n",
+    "]\n",
     "\n",
     "\n",
+    "DA_high_sig = [\n",
+    "    \"A\",\n",
+    "    \"NAc\",\n",
+    "]  #                 / agg_antag [\"NAc\", \"VM\", \"DM\", \"VL\", \"DL\"] # none pass 2way\n",
+    "DA_low_sig = [\n",
+    "    \"PL\",\n",
+    "    \"aCC\",\n",
+    "    \"S1L\",\n",
+    "    \"S1R\",\n",
+    "    \"DLG\",\n",
+    "    \"HY\",\n",
+    "    \"SC\",\n",
+    "    \"DR\",\n",
+    "]  #    , 'OF'   /   agg_antag [ \"aCC\",  \"MR\", \"S1L\"] #S1L didnt pass 2way\n",
+    "DOPAC_DA_sig = [\n",
+    "    \"PL\",\n",
+    "    \"aCC\",\n",
+    "    \"S1L\",\n",
+    "    \"DM\",\n",
+    "    \"DLG\",\n",
+    "    \"CB\",\n",
+    "]  #                / agg_antag ['DM', 'VTA, 'DLG', 'aCC'] #DLG aCC dont pass 2way\n",
+    "toiMT_DA_sig = [\"NAc\", \"VM\", \"DM\", \"VL\", \"DL\"]\n",
+    "HVA_DA_sig = [\n",
+    "    \"CB\",\n",
+    "    \"HY\",\n",
+    "    \"SC\",\n",
+    "    \"dH\",\n",
+    "]  #      'S1R', 'aCC',   'DR',          / agg_antag ['VTA']\n",
     "\n",
-    "DA_high_sig = ['A','NAc', ] #                 / agg_antag [\"NAc\", \"VM\", \"DM\", \"VL\", \"DL\"] # none pass 2way\n",
-    "DA_low_sig = [\"PL\",\"aCC\",\"S1L\",\"S1R\",\"DLG\",\"HY\",\"SC\",\"DR\"] #    , 'OF'   /   agg_antag [ \"aCC\",  \"MR\", \"S1L\"] #S1L didnt pass 2way\n",
-    "DOPAC_DA_sig = [\"PL\",\"aCC\", \"S1L\",\"DM\",\"DLG\",\"CB\"] #                / agg_antag ['DM', 'VTA, 'DLG', 'aCC'] #DLG aCC dont pass 2way\n",
-    "toiMT_DA_sig = [\"NAc\",\"VM\",\"DM\",\"VL\",\"DL\"]\n",
-    "HVA_DA_sig = ['CB',  'HY', 'SC',  'dH'] #      'S1R', 'aCC',   'DR',          / agg_antag ['VTA']\n",
-    "\n",
-    "NA_sig= ['aCC','vH', 'NAc','VPL', 'VPR','HY', 'SC', 'SN','VTA'] #VMA/NA in DLG add vH too for summary style / agg_ant [\"aCC\", \"vH\"]\n",
-    "VMA_NA_sig = ['DLG']\n",
+    "NA_sig = [\n",
+    "    \"aCC\",\n",
+    "    \"vH\",\n",
+    "    \"NAc\",\n",
+    "    \"VPL\",\n",
+    "    \"VPR\",\n",
+    "    \"HY\",\n",
+    "    \"SC\",\n",
+    "    \"SN\",\n",
+    "    \"VTA\",\n",
+    "]  # VMA/NA in DLG add vH too for summary style / agg_ant [\"aCC\", \"vH\"]\n",
+    "VMA_NA_sig = [\"DLG\"]\n",
     "\n",
     "# \"aCC\" # ['5HT', 'DA', \"NA\", 'HVA'] # [\"5HIAA/5HT\", \"5HT/5HTP\", \"DOPAC/DA\"]\n",
-    "DA_sig_twoway = [ 'MR',  'aCC', 'A'] \n",
-    "DOPAC_DA_sig_twoway = [ 'DM', 'VTA'] #'DM',\n",
-    "HVA_DA_sig_twoway = [ 'VTA']\n",
-    "\n",
+    "DA_sig_twoway = [\"MR\", \"aCC\", \"A\"]\n",
+    "DOPAC_DA_sig_twoway = [\"DM\", \"VTA\"]  #'DM',\n",
+    "HVA_DA_sig_twoway = [\"VTA\"]\n",
     "\n",
     "\n",
     "from module.core.Figure import Histogram\n",
-    "hist = Histogram(project = 'TCB-2', \n",
-    "                experiment='agonist_antagonist', # dose_response / agonist_antagonist / None / weight\n",
-    "                compound='DA', # 5HIAA/5HT \n",
-    "                region= 'TCB2_regions', #list\n",
-    "                from_scratch=True, \n",
-    "                remove_outliers='calculated', # calculated / eliminated / False\n",
-    "                # custom_params={\"fig_width\": 20},  # fixed fig with bar width vaires \n",
-    "                # custom_params={\"ylabel_x\": -0.02},\n",
-    "                )"
+    "\n",
+    "hist = Histogram(\n",
+    "    project=\"TCB-2\",\n",
+    "    experiment=\"agonist_antagonist\",  # dose_response / agonist_antagonist / None / weight\n",
+    "    compound=\"DA\",  # 5HIAA/5HT\n",
+    "    region=\"TCB2_regions\",  # list\n",
+    "    from_scratch=True,\n",
+    "    remove_outliers=\"calculated\",  # calculated / eliminated / False\n",
+    "    # custom_params={\"fig_width\": 20},  # fixed fig with bar width vaires\n",
+    "    # custom_params={\"ylabel_x\": -0.02},\n",
+    ")"
    ]
   },
   {
@@ -149,19 +204,20 @@
    "outputs": [],
    "source": [
     "from module.core.Figure import Histogram\n",
-    "hist = Histogram(project = 'TCB-2', \n",
-    "                experiment='agonist_antagonist', \n",
-    "                compound=\"DA\", \n",
-    "                region= 'A', \n",
-    "                from_scratch=True, \n",
-    "                remove_outliers='calculated', # calculated / eliminated / False\n",
-    "                # custom_params={\"ylabel_x\": -0.1}\n",
-    "                )\n",
     "\n",
+    "hist = Histogram(\n",
+    "    project=\"TCB-2\",\n",
+    "    experiment=\"agonist_antagonist\",\n",
+    "    compound=\"DA\",\n",
+    "    region=\"A\",\n",
+    "    from_scratch=True,\n",
+    "    remove_outliers=\"calculated\",  # calculated / eliminated / False\n",
+    "    # custom_params={\"ylabel_x\": -0.1}\n",
+    ")\n",
     "\n",
     "\n",
     "hist.statistic.two_way_anova\n",
-    "# hist.statistics_table.select(test='tukey')\n"
+    "# hist.statistics_table.select(test='tukey')"
    ]
   },
   {
@@ -171,16 +227,17 @@
    "outputs": [],
    "source": [
     "# SINGLE CORRECLATION\n",
-    "from module.core.Figure import Correlation \n",
+    "from module.core.Figure import Correlation\n",
     "\n",
-    "Correlation(project ='TCB-2', \n",
-    "                experiment='agonist_antagonist', \n",
-    "                treatment = '3mg/kg TCB-2',\n",
-    "                compound='5HT', \n",
-    "                region= ['S1L','aCC'], \n",
-    "                from_scratch=True, \n",
-    "                remove_outliers='calculated', # calculated / eliminated / False\n",
-    "                )"
+    "Correlation(\n",
+    "    project=\"TCB-2\",\n",
+    "    experiment=\"agonist_antagonist\",\n",
+    "    treatment=\"3mg/kg TCB-2\",\n",
+    "    compound=\"5HT\",\n",
+    "    region=[\"S1L\", \"aCC\"],\n",
+    "    from_scratch=True,\n",
+    "    remove_outliers=\"calculated\",  # calculated / eliminated / False\n",
+    ")"
    ]
   },
   {
@@ -189,21 +246,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from module.core.Figure import Correlogram \n",
+    "from module.core.Figure import Correlogram\n",
     "\n",
     "\n",
-    "Correlogram(project ='TCB-2', \n",
-    "                # experiment='agonist_antagonist', \n",
-    "                compound='5HT',  # 'monoamines'\n",
-    "                region= 'TCB2_regions', \n",
-    "                from_scratch=True, \n",
-    "                remove_outliers='calculated', # calculated / eliminated / False\n",
-    "                )"
+    "Correlogram(\n",
+    "    project=\"TCB-2\",\n",
+    "    # experiment='agonist_antagonist',\n",
+    "    compound=\"5HT\",  # 'monoamines'\n",
+    "    region=\"TCB2_regions\",\n",
+    "    from_scratch=True,\n",
+    "    remove_outliers=\"calculated\",  # calculated / eliminated / False\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,8 +293,8 @@
     "    \"vH\",\n",
     "    \"A\",\n",
     "    \"SC\",\n",
-    "    \"CB\"\n",
-    "  ]"
+    "    \"CB\",\n",
+    "]"
    ]
   },
   {
@@ -245,23 +303,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from module.core.Figure import Network \n",
-    "from module.core.Constants import * \n",
+    "from module.core.Figure import Network\n",
+    "from module.core.Constants import *\n",
     "\n",
     "\n",
-    " \n",
-    "Network(project ='TCB-2', \n",
-    "                # experiment='agonist_antagonist', \n",
-    "                compound='5HT', \n",
-    "                region= 'TCB2_condensed', # 'dopamine_vibes' / 'thalamocortical_interaction' / 'TCB2_regions'\n",
-    "                from_scratch=True, \n",
-    "                remove_outliers='calculated', # calculated / eliminated / False\n",
-    "                # custom_params = { 'edge_thickness': 1} , #'show_edge_labels':True,\n",
-    "                )\n",
+    "Network(\n",
+    "    project=\"TCB-2\",\n",
+    "    # experiment='agonist_antagonist',\n",
+    "    compound=\"5HT\",\n",
+    "    region=\"TCB2_condensed\",  # 'dopamine_vibes' / 'thalamocortical_interaction' / 'TCB2_regions'\n",
+    "    from_scratch=True,\n",
+    "    remove_outliers=\"calculated\",  # calculated / eliminated / False\n",
+    "    # custom_params = { 'edge_thickness': 1} , #'show_edge_labels':True,\n",
+    ")\n",
     "\n",
-    "#NA     Reds\n",
-    "#DA     Blues\n",
-    "#5HT    Oranges\n",
+    "# NA     Reds\n",
+    "# DA     Blues\n",
+    "# 5HT    Oranges\n",
     "\n",
     "# print (REGION_CLASSES['thalamocortical_interaction'])"
    ]
@@ -272,29 +330,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TABLES \n",
+    "# TABLES\n",
     "from module.core.Figure import Table, StatisticsTable\n",
     "\n",
     "\n",
-    "#DATA TABLE\n",
-    "# Table(project ='TCB-2', \n",
-    "#                 # experiment='project', \n",
+    "# DATA TABLE\n",
+    "# Table(project ='TCB-2',\n",
+    "#                 # experiment='project',\n",
     "#                 compound=['5HT', '5HIAA', 'DA', 'DOPAC', 'HVA', '3MT', 'NA'], #SD\n",
     "#                 treatment = 'vehicles',\n",
-    "#                 region= 'TCB2_regions', \n",
-    "#                 from_scratch=True, \n",
+    "#                 region= 'TCB2_regions',\n",
+    "#                 from_scratch=True,\n",
     "#                 remove_outliers='calculated', # calculated / eliminated / False\n",
     "#                 )\n",
     "\n",
-    "#STATISTICS TABLE\n",
-    "StatisticsTable(project=\"TCB-2\", \n",
-    "                          experiment=\"agonist_antagonist\",\n",
-    "                          region='A', \n",
-    "                          compound = ['DA'],\n",
-    "                          from_scratch=True\n",
-    "                          )\n",
-    "\n",
-    "\n"
+    "# STATISTICS TABLE\n",
+    "StatisticsTable(\n",
+    "    project=\"TCB-2\",\n",
+    "    experiment=\"agonist_antagonist\",\n",
+    "    region=\"A\",\n",
+    "    compound=[\"DA\"],\n",
+    "    from_scratch=True,\n",
+    ")"
    ]
   }
  ],
